# advent-of-code-2021

./: .gitignore
1/: aof-1  go.mod  main.go
1.2/: go.mod  main.go
10/: go.mod  main.go
11/: 11.hs
11/other/: foo.hs  foo2  foo2.hs
12/: 12  12.hs
13/: 13.hs
14/: 14.hs
15/: 15.hs  x15.cabal
15/other/reddit1/: CHANGELOG.md  other  other.cabal
15/other/reddit1/app/: Main.hs
16/: 16.hs  testpackets.txt  x16.cabal
16/app/: Main.hs
2/: aof-2  go.mod
2.1/: main.go
2.2/: 2.hs  main.go
3/: aof-3  go.mod
3.1/: go.mod  main.go
3.2/: go.mod  main.go
4/: go.mod
4.1/: main.go
4.2/: 4.hs  Readme.md
5/: go.mod  input
5.1/: go.mod  main.go
5.2/: go.mod  main.go
6/: go.mod
6.1/: go.mod  main.go
7/: go.mod  main.go
7.1/: go.mod  main.go
8.1/: go.mod  main.go
9.1/: go.mod  main.go
haskell/1/: 1.hs
haskell/11/: 11.hs
