cabal-version:      2.4
name:               aoc15
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: advent of code 2021 day 15.

-- A longer description of the package.
description: Trying out making a cabal package

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author:             Jurjen
maintainer:         jurjenm@yahoo.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x15
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
        base ^>=4.14.3.0,
        search-algorithms,
        split,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010
